<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/text_padding"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/input_layout"
        android:layout_marginTop="@dimen/small_margin">

        <EditText
            android:id="@+id/et_from"
            style="@style/edit_text"
            android:enabled="false"
            android:hint="@string/transaction_from" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/input_layout"
        android:layout_marginTop="@dimen/small_margin">

        <EditText
            android:id="@+id/et_money"
            style="@style/edit_text"
            android:hint="@string/hint_money"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/input_layout"
        android:layout_marginTop="@dimen/small_margin">

        <EditText
            android:id="@+id/et_remark"
            style="@style/edit_text"
            android:hint="@string/hint_remark" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rg_type"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_input"
            android:text="@string/input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rb_output"
            android:text="@string/output"
            android:layout_marginTop="@dimen/text_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
</LinearLayout>